Build: index.html styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,11 +12,11 @@
 {% block content %}
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container d-flex h-100 align-items-center">
+        <div class="container d-flex align-items-center">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                <a class="btn btn-primary js-scroll-trigger" href="#about">Get Started</a>
+                <h2 class="mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
+                <a class="btn btn-primary js-scroll-trigger opaque" href="#about">Get Started</a>
             </div>
         </div>
     </header>
@@ -25,8 +25,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto">
-                    <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-                    <p class="text-white-50">
+                    <h2 class="mb-4">Built with Bootstrap 4</h2>
+                    <p class="">
                         Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
                         <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
                         . The theme is open source, and you can use it for any purpose, personal or commercial.
