--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -165,7 +165,7 @@ a {
   background-color: transparent;
 }
 a:hover {
-  color: #467370;
+  color: #409691;
   text-decoration: underline;
 }
 
@@ -3010,6 +3010,7 @@ input[type=button].btn-block {
 
 .collapse:not(.show) {
   display: none;
+  background-color: transparent;
 }
 
 .collapsing {
@@ -3984,7 +3985,7 @@ input[type=button].btn-block {
 }
 .nav-tabs .nav-link.active,
 .nav-tabs .nav-item.show .nav-link {
-  color: #495057;
+  color: #409691;
   background-color: #fff;
   border-color: #dee2e6 #dee2e6 #fff;
 }
@@ -3999,7 +4000,7 @@ input[type=button].btn-block {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #409691;
   background-color: #64a19d;
 }
 
@@ -4050,6 +4051,7 @@ input[type=button].btn-block {
   font-size: 1.25rem;
   line-height: inherit;
   white-space: nowrap;
+  color: #426765;
 }
 .navbar-brand:hover, .navbar-brand:focus {
   text-decoration: none;
@@ -4081,6 +4083,7 @@ input[type=button].btn-block {
   flex-basis: 100%;
   flex-grow: 1;
   align-items: center;
+  background-color: white;
 }
 
 .navbar-toggler {
@@ -4313,16 +4316,16 @@ input[type=button].btn-block {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(0, 0, 0, 0.9);
+  color: #426765;
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: #409691;
 }
 .navbar-light .navbar-nav .nav-link {
-  color: rgba(0, 0, 0, 0.5);
+  color: #426765;
 }
 .navbar-light .navbar-nav .nav-link:hover, .navbar-light .navbar-nav .nav-link:focus {
-  color: rgba(0, 0, 0, 0.7);
+  color: #409691;
 }
 .navbar-light .navbar-nav .nav-link.disabled {
   color: rgba(0, 0, 0, 0.3);
@@ -4347,20 +4350,20 @@ input[type=button].btn-block {
   color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-text a:hover, .navbar-light .navbar-text a:focus {
-  color: rgba(0, 0, 0, 0.9);
+  color: #409691;
 }
 
 .navbar-dark .navbar-brand {
-  color: #fff;
+  color: #426765;
 }
 .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-  color: #fff;
+  color: #409691;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5);
+  color: #426765;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #409691;
 }
 .navbar-dark .navbar-nav .nav-link.disabled {
   color: rgba(255, 255, 255, 0.25);
@@ -4369,7 +4372,7 @@ input[type=button].btn-block {
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #fff;
+  color: #426765;
 }
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.5);
@@ -4385,7 +4388,7 @@ input[type=button].btn-block {
   color: #fff;
 }
 .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
-  color: #fff;
+  color: #409691;
 }
 
 .card {
@@ -10118,7 +10121,7 @@ body {
 }
 
 #mainNav {
-  max-height: 3.5rem;
+  max-height: 4.5rem;
   background-color: #fff;
 }
 #mainNav .navbar-toggler {
@@ -10131,7 +10134,7 @@ body {
   outline: none;
 }
 #mainNav .navbar-brand {
-  color: #000000;
+  color: #426765;
   font-weight: 700;
   padding: 0.9rem 0;
 }
@@ -10154,24 +10157,24 @@ body {
   }
   #mainNav .navbar-brand {
     padding: 0.5rem 0;
-    color: rgba(255, 255, 255, 0.5);
+    color: #426765;
   }
   #mainNav .nav-link {
     transition: none;
     padding: 2rem 1.5rem;
-    color: rgba(255, 255, 255, 0.5);
+    color: #426765;
   }
   #mainNav .nav-link:hover {
-    color: rgba(255, 255, 255, 0.75);
+    color: #409691;
   }
   #mainNav .nav-link:active {
-    color: #fff;
+    color: #409691;
   }
   #mainNav.navbar-shrink {
     background-color: #fff;
   }
   #mainNav.navbar-shrink .navbar-brand {
-    color: #000000;
+    color: #426765;
   }
   #mainNav.navbar-shrink .nav-link {
     color: #000000;
@@ -10179,13 +10182,13 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #64a19d;
+    color: #409691;
   }
   #mainNav.navbar-shrink .nav-link:active {
-    color: #467370;
+    color: #409691;
   }
   #mainNav.navbar-shrink .nav-link.active {
-    color: #64a19d;
+    color: #409691;
     outline: none;
     border-bottom: 0.25rem solid #64a19d;
   }
@@ -10206,12 +10209,12 @@ body {
   width: 100%;
   height: auto;
   min-height: 35rem;
-  padding: 15rem 0;
   background: url("/media/assets/img/pexels-kaboompics-com-5929.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
+  opacity: 0.9;
 }
 .masthead h1 {
   font-family: "Varela Round", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -10227,6 +10230,19 @@ body {
   max-width: 20rem;
   font-size: 1rem;
 }
+.masthead .container {
+    background-color: #FFFEFE;
+    height: 50vh;
+    padding-top: 5vh 0;
+    opacity: 0.7;
+    color: #303F3F;
+}
+
+.opaque {
+    opacity: 1;
+    z-index: 1;
+}
+
 @media (min-width: 768px) {
   .masthead h1 {
     font-size: 4rem;
@@ -10236,7 +10252,6 @@ body {
 @media (min-width: 992px) {
   .masthead {
     height: 100vh;
-    padding: 0;
   }
   .masthead h1 {
     font-size: 6.5rem;
@@ -10334,7 +10349,7 @@ body {
   color: rgba(255, 255, 255, 0.3);
 }
 .contact-section .social a:hover {
-  color: rgba(255, 255, 255, 0.5);
+  color: #409691;
 }
 .contact-section .social a:active {
   color: #fff;
@@ -10342,4 +10357,20 @@ body {
 
 .footer {
   padding: 5rem 0;
+}
+
+@media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
+
+    .masthead {
+        padding: 25vh 0;
+    }
+
+}
+
+@media screen and (orientation: landscape){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
+
+    .masthead {
+        padding: 35vh 0 15vh;
+    }
+
 }
