Build: further index.html styling

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -12,11 +12,11 @@
 {% block content %}
     <!-- Masthead-->
     <header class="masthead">
-        <div class="container d-flex align-items-center">
+        <div class="container d-flex align-items-center opaque-70">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-                <h2 class="mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                <a class="btn btn-primary js-scroll-trigger opaque" href="#about">Get Started</a>
+                <h1 class="mx-auto text-uppercase flex-margin-b">BUILD-A-BUFFET</h1>
+                <h2 class="mx-auto flex-margin-b">Handmade selections of delicious food, delivered to your door for: parties, weddings, functions or corporate events.</h2>
+                <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="#about">Get Started</a>
             </div>
         </div>
     </header>
