--- a/templates/base.html
+++ b/templates/base.html
@@ -41,13 +41,13 @@
     {% block extra_js %}
     {% endblock %}
 
-    <title>Build-a-Buffet {% block extra_title %}{% endblock %}</title>
+    <title>Build-a-Buffet{% block extra_title %}{% endblock %}</title>
   </head>
   <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Start Bootstrap</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">BUILD-A-BUFFET</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
