--- a/templates/base.html
+++ b/templates/base.html
@@ -53,10 +53,12 @@
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">Projects</a></li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">Contact</a></li>
+                    <ul class="navbar-nav ml-auto align-vertically">
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">menus</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">account</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#signup">customer service</a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger bartholemew-menu" href="#signup"><img src="media/assets/img/bartholemew-sml.jpg" alt="bartholemew" height="36"></a></li>
+                        <li class="nav-item"><a class="nav-link js-scroll-trigger text-center text-xs basket" href="#signup"><i class="fa fa-shopping-basket" aria-hidden="true"></i><br><span class=" text-xs">£0.00</span></a></li>
                     </ul>
                 </div>
             </div>
