--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -20,44 +20,18 @@
             </div>
         </div>
     </header>
-    <!-- About-->
-    <section class="about-section text-center" id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto">
-                    <h2 class="mb-4">Built with Bootstrap 4</h2>
-                    <p class="">
-                        Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                        <a href="https://startbootstrap.com/theme/grayscale/">the preview page</a>
-                        . The theme is open source, and you can use it for any purpose, personal or commercial.
-                    </p>
-                </div>
-            </div>
-            <img class="img-fluid" src="media/assets/img/ipad.png" alt="" />
-        </div>
-    </section>
     <!-- Projects-->
     <section class="projects-section bg-light" id="projects">
         <div class="container">
-            <!-- Featured Project Row-->
-            <div class="row align-items-center no-gutters mb-4 mb-lg-5">
-                <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="/assets/img/bg-masthead.jpg" alt="" /></div>
-                <div class="col-xl-4 col-lg-5">
-                    <div class="featured-text text-center text-lg-left">
-                        <h4>Shoreline</h4>
-                        <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-                    </div>
-                </div>
-            </div>
             <!-- Project One Row-->
             <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
-                <div class="col-lg-6"><img class="img-fluid" src="media/assets/img/demo-image-01.jpg" alt="" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
                 <div class="col-lg-6">
-                    <div class="bg-black text-center h-100 project">
+                    <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
-                                <h4 class="text-white">Misty</h4>
-                                <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                                <h4 class="text-blue">Hot and cold</h4>
+                                <p class="mb-0 text-blue">Delivered, ready to eat in ZiplokTM microwaveable bags, to keep your food fresh and delicious. Simply remove the packaging and serve, or for hot food, heat in the microwave for 30 seconds before serving.</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0" />
                             </div>
                         </div>
@@ -66,13 +40,15 @@
             </div>
             <!-- Project Two Row-->
             <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid" src="media/assets/img/demo-image-02.jpg" alt="" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="media/assets/img/pexels-kaboompics-com-5944.jpg" alt="" /></div>
                 <div class="col-lg-6 order-lg-first">
-                    <div class="bg-black text-center h-100 project">
+                    <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-right">
-                                <h4 class="text-white">Mountains</h4>
-                                <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                                <h4 class="text-blue">Options for all diets</h4>
+                                <p class="mb-0 text-blue">A full choice of vegetarian and vegan options, both hot and cold, with allergy advice* provided across the full range of allergens.
+                                    <br>
+                                    * although every care is taken in our production process, we cannot guarantee allergen free.</p>
                                 <hr class="d-none d-lg-block mb-0 mr-0" />
                             </div>
                         </div>
@@ -81,23 +57,8 @@
             </div>
         </div>
     </section>
-    <!-- Signup-->
-    <section class="signup-section" id="signup">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-10 col-lg-8 mx-auto text-center">
-                    <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                    <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                    <form class="form-inline d-flex">
-                        <input class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" type="email" placeholder="Enter email address..." />
-                        <button class="btn btn-primary mx-auto" type="submit">Subscribe</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- Contact-->
-    <section class="contact-section bg-black">
+    <section class="contact-section bg-blue">
         <div class="container">
             <div class="row">
                 <div class="col-md-4 mb-3 mb-md-0">
@@ -106,7 +67,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Address</h4>
                             <hr class="my-4" />
-                            <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                            <div class="small text-black-50">22 Acacia Avenue</div>
                         </div>
                     </div>
                 </div>
@@ -126,15 +87,10 @@
                             <i class="fas fa-mobile-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Phone</h4>
                             <hr class="my-4" />
-                            <div class="small text-black-50">+1 (555) 902-8832</div>
+                            <div class="small text-black-50">+1 (555) 555-5555</div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="social d-flex justify-content-center">
-                <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </section>
