--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,8 @@
                         </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#account">account</a></li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#service">customer service</a></li>
+                        <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#basket">basket</a></li>
+                        <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#bot">BUILD-A-BUFFET</a></li>
                     </ul>
                 </div>
             </div>
