Build: added products app

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -14,7 +14,7 @@
     <header class="masthead">
         <div class="container d-flex align-items-center opaque-70">
             <div class="mx-auto text-center">
-                <h1 class="mx-auto text-uppercase flex-margin-b">BUILD-A-BUFFET</h1>
+                <h1 class="mx-auto text-uppercase flex-margin-b">{{ product }}</h1>
                 <h2 class="mx-auto flex-margin-b">Handmade selections of delicious food, delivered to your door for: parties, weddings, functions and corporate events.</h2>
                 <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="#about">Get Started</a>
             </div>
