--- a/templates/base.html
+++ b/templates/base.html
@@ -81,7 +81,7 @@
                                 menus
                             </a>
                             <div class="dropdown-menu border-0" aria-labelledby="all-menus-link">
-                                <a href="" class="dropdown-item">sandwiches</a>
+                                <a href="{% url 'products_sandwiches' %}" class="dropdown-item">sandwiches</a>
                                 <a href="" class="dropdown-item">salads</a>
                                 <a href="" class="dropdown-item">dips</a>
                                 <a href="" class="dropdown-item">meat</a>
