--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -25,13 +25,13 @@
         <div class="container">
             <!-- Produce One Row-->
             <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid image-80" src="media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5928.jpg" alt="salad bowl" /></div>
                 <div class="col-lg-6">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
                             <div class="project-text w-100 my-auto text-center text-lg-left">
                                 <h4 class="text-blue">Hot and cold</h4>
-                                <p class="mb-0 text-blue">Delivered, ready to eat in ZiplokTM microwaveable bags, to keep your food fresh and delicious. Simply remove the packaging and serve, or for hot food, heat in the microwave for 30 seconds before serving.</p>
+                                <p class="mb-0 text-blue">Delivered, ready to eat in Ziplok<sup>TM</sup> microwaveable bags, to keep your food fresh and delicious. Simply remove the packaging and serve, or for hot food, heat in the microwave for 30 seconds before serving.</p>
                                 <hr class="d-none d-lg-block mb-0 ml-0" />
                             </div>
                         </div>
@@ -40,7 +40,7 @@
             </div>
             <!-- Produce Two Row-->
             <div class="row justify-content-center no-gutters">
-                <div class="col-lg-6"><img class="img-fluid image-80" src="media/assets/img/pexels-kaboompics-com-5944.jpg" alt="" /></div>
+                <div class="col-lg-6"><img class="img-fluid image-80" src="/media/assets/img/pexels-kaboompics-com-5944.jpg" alt="chips-n-dips" /></div>
                 <div class="col-lg-6 order-lg-first">
                     <div class="text-center h-100 project">
                         <div class="d-flex h-100">
