Build: added functionality to products view

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -15,7 +15,9 @@
         <div class="container d-flex align-items-center opaque-70">
             <div class="mx-auto text-center">
                 <h1 class="mx-auto text-uppercase flex-margin-b">{{ category }}</h1>
-                <h2 class="mx-auto flex-margin-b">{{ products|name }}</h2>
+                {% for product in products %}
+                    <h2 class="mx-auto flex-margin-b">Name: {{ product.name }}</h2>
+                {% endfor %}
                 <a class="masthead-button opaque-100 btn btn-primary js-scroll-trigger flex-margin-b" href="#about">Get Started</a>
             </div>
         </div>
